<resources>
    <string name="app_name">VaporZone</string>
    <string name="logo">Logo</string>
    <string name="login">LOGIN</string>
    <string name="next">NEXT PAGE</string>
    <string name="device">HEXOHM</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="profile">Profile</string>
    <string name="hexohm_v3">Hexohm V3</string>
    <string name="hexohm_v3details">\t\tHexOhm 3.0 memiliki papan milik sendiri yang memiliki peringkat hingga 30 amp dan mampu 180 watt. Beberapa fitur tambahan yang kami tambahkan termasuk cutoff tegangan rendah untuk perlindungan baterai, timer cutoff 10 detik dan sakelar hidup / mati utama.</string>
    <string name="hexohm_v3detailseng">\t\tHexOhm 3.0 has its own board which has a rating of up to 30 amps and is capable of 180 watts. Some additional features we added include a low voltage cutoff for battery protection, a 10 second cutoff timer and a main on / off switch.</string>
    <string name="hexohm_v3spec">Min Volts: 3 Volts\nMax Volts: 6 Volts\nMax Amps: 30 Amps\nMax Watts: 180 Watts\nEnclosure: Aluminum\nBattery Sled: Ultem\nBattery Contacts: Solid brass\nPower Circuit: HEX-T/30-c\nResistance Range: .10 – ∞\nRecommended Ohms: .2</string>
    <string name="hexohm_indonesia">(Indonesia)</string>
    <string name="hexohm_english">(English)</string>
    <string name="hexohm_v3_specification">Hexohm V3 Specification</string>
    <string name="druga_foxy">Druga Foxy</string>
    <string name="drugafoxy_indonesia">(Indonesia)</string>
    <string name="drugafoxy_english">(English)</string>
    <string name="drugafoxy_specification">Druga Foxy Specification</string>
    <string name="drugafoxy_specdetails">Maximum Wattage Output: 150W\nMaximum Output Current: 45A\nOutput Voltage Range: 0.5~6.5V\nResistance Range: 0.05~3.0 Ohm\nHigh Quality Zinc Alloy Construction\nSwitchable IML Panels\nGold-Plated Brass 510 Contact\n9.2mm by 5.2mm OLED Digital Display\nRead Resistance Automatically</string>
    <string name="drugafoxy_detailsind">Druga Foxy dirancang untuk menjadi kompak, solid, dan estetika. Ditenagai dua baterai 18650 secara seri dan mampu menghasilkan pasangan 150 watt dengan 0,1 &#8212; 0,38 Ohm. Ini mendukung resistensi dari 0,05 &#8212; 3 Ohm.Druga Foxy adalah mod VV / VW dengan tombol Quick Release yang membuatnya sangat mudah untuk menginstal dan melepaskan alat penyemprot. Augvape adalah perusahaan pertama yang memperkenalkan desain inovatif ini. Dan desain paten yang disebut Rilis Cepat ini telah disetujui oleh Kantor Paten China.</string>
    <string name="drugafoxy_detailseng">The Druga Foxy is designed to be compact, solid and aesthetics. Its powered by two 18650 batteries in series and capable of generating 150 watts pairing with 0.1 &#8212; 0.38 Ohms. It supports resistance from 0.05 &#8212; 3 Ohms. The Druga Foxy is a VV/VW mod with Quick Release button which makes it so easy to install and release atomizer. Augvape is the first company to introduce this innovative design. And this patent design called Quick Release has been approved by the Chinese Patent Office.</string>
    <string name="sxmini">SX Mini G Class</string>
    <string name="sxmini_indonesia">(Indonesia)</string>
    <string name="sxmini_english">(English)</string>
    <string name="sxmini_specification">SX Mini G Class Specification</string>
    <string name="sxmini_specdetails">Powered by YiHi SX550J\nTFT ips Screen\nUSB 3.0 Type C\nJoystick Controller\nBluetooth App Control (Android and iOS)\n2X18650 Maximum Output Wattage of 200W\n</string>
    <string name="sxmini_detailsind">Chipset yang ditampilkan dalam YiHi SX Mini adalah SX550J. Ini adalah sirkuit yang sangat kuat yang mengontrol suhu dari 212 hingga 572 ° F, watt hingga 200W dan tahan sepanjang jalan dari 0,15 menjadi 3,0 Ohm. Kumparan Stainless Steel, Titanium, dan Nikel semua dapat ditembakkan oleh chipset secara efisien dan aman. Fitur-fitur canggih membuat SX Mini ideal untuk vapers berpengalaman yang ingin menyempurnakan vape mereka. Itu dibuat untuk orang-orang yang suka mengendalikan vape mereka dan jarang vape dalam mode daya. Pemula mungkin kewalahan oleh kurva belajar yang diperlukan untuk mendapatkan hasil maksimal dari mod ini.</string>
    <string name="sxmini_detailseng">The chipset featured in the YiHi SX Mini is the SX550J. It is a really powerful circuit that controls the temperature from 212 to 572°F, wattage up to 200W and resistance all the way down from 0.15 to 3.0 Ohms. Stainless Steel, Titanium, and Nickel coils can all be fired by the chipset efficiently and safely. The advanced features make SX Mini an ideal for experienced vapers who are looking to fine-tune their vape. It is made for people that love to take control of their vape and rarely vape in power mode. Beginners might be overwhelmed by the learning curve necessary to get the most out of this mod.</string>
    <string name="asmodus">Asmodus Lustro</string>
    <string name="asmodus_indonesia">(Indonesia)</string>
    <string name="asmodus_english">(English)</string>
    <string name="asmodus_specification">Asmodus Lustro Specification</string>
    <string name="asmodus_specdetails">Requires 2x 18650 sized batteries (not included)\nAccommodates Attys and tanks up to 25mm\nTouch screen type: Capacitve Screen; Requires the electrical properties of the human body to detect when and where the screen is touched\nWattage range (Power mode): 5W &#8212; 200W\nWattage range (TC modes): 5W &#8212; 120W\nTemperature control range: 212° &#8212; 572°F / 100° &#8212; 300°\nAtomizer ohm range: 0.1 &#8212; 2.5 ohm\nMax output voltage: 7.5V\nPeek output current: 45A\nCharging parameters: DC 5V/1A\nUpgradeable firmware\nUSB TYPE-C\nProduct Dimensions: Length: 80.4mmWidth: 40.5mmThickness: 36.0mm</string>
    <string name="asmodus_detailsind">Lustro menggunakan chipset GX-200-HUT dan ditenagai oleh dua baterai 18650 Li-ion berdaya tinggi sehingga mampu menghasilkan potensi maksimum 200 watt. Berbagai mode pengapian memastikan Lustro selalu siap dalam berbagai kondisi, dengan variabel watt, kurva daya dan mode kontrol suhu serta TCR dan TFR yang dapat disesuaikan.</string>
    <string name="asmodus_detailseng">Lustro uses the GX-200-HUT chipset and is powered by two high power 18650 Li-ion batteries so as to produce a maximum potential of 200 watts. Various ignition modes ensure that Lustro is always ready in a variety of conditions, with variable wattage, power curves and temperature control modes and adjustable TCR and TFR.</string>
    <string name="artha">Artha V2</string>
    <string name="artha_indonesia">(Indonesia)</string>
    <string name="artha_english">(English)</string>
    <string name="artha_specification">Artha V2 Specification</string>
    <string name="artha_specdetails">24mm RDA With PVD Black Plated Deck\n2 Pcs 810 Drip Tips\nQuadruple Posts With Single Hole Of Each,Compatible With Single Or Dual Coil Builed\n24K Gold Plated Positive Post\nDiamond Pattern Top Cap\nDeep Juice Well\nCompatible With Bottom Feed Box Mod</string>
    <string name="artha_detailsind">Atomizer ini merupakan kolaborasi dari YouTuber dalam negeri, yaitu Fatriio dengan pabrikan vape Advken. Untuk masalah flavor, kamu tidak perlu lagi meragukannya. Karena Artha RDA disebut sebagai salah satu RDA dengan Flavour terbaik.Kamu bisa memilih dua warna top cap dari Artha RDA, yaitu warna kuning dan hitam. Untuk yang berwarna kuning, Artha RDA menggunakan material ultem sebagai bahan utama. Dan untuk material ultem, kamu tidak bisa mengatur airflow, tidak top cap warna hitam yang bersifat adjustable airflow. </string>
    <string name="artha_detailseng">This atomizer is a collaboration of domestic YouTubers, namely Fatriio and Advken vape manufacturer. For flavor issues, you dont need to doubt that. Because Artha RDA is referred to as one of the RDA with the best Flavor. You can choose two top cap colors from Artha RDA, namely yellow and black. For the yellow one, Artha RDA uses ultem material as the main ingredient. And for ultem material, you can not adjust the airflow, not the black top cap that is adjustable airflow.</string>
    <string name="drop">Drop RDA</string>
    <string name="drop_indonesia">(Indonesia)</string>
    <string name="drop_english">(English)</string>
    <string name="drop_specification">Drop RDA Specification</string>
    <string name="drop_specdetails">24mm Diameter\nStainless Steel Construction\n4 Post Deck Design\nGold Plated Posts\nSide Tension Applied Via Flat Head Screws\n3.2mm by 2.5mm Terminals\n5.3mm Deep Juice Well\nPEEK Insulator\nAngular and Accessible Coil Lead Trimming Design\nBarrel To Deck Locking Mechanism\nAligns Airflow Holes To Coils\nDual Adjustable Stepped Airflow Design\n810 Ultem Wide Bore Drip Tip\n810 Frosted Wide Bore Drip Tip\n510 Delrin Drip Tip Adaptor\nSquonk Mod Compatible\nGold Plated 510 Pin</string>
    <string name="drop_detailsind">Drop RDA hadir dalam kotak kecil yang menampilkan jendela transparan. Ini memungkinkan Anda untuk melihat Drop sebelum Anda bahkan membuka kotak. Drop RDA dilapisi busa, di samping ujung tetes cadangan Anda. Lepaskan busa, dan Anda akan menemukan tas suku cadang Anda, serta panduan pengguna. Digiflavor juga cukup bijaksana untuk menyertakan adaptor ujung tetes 510, serta pin squonk yang memberi makan dengan Drop. Selain itu, alat obeng berbentuk T yang disertakan cukup praktis, dan saya mendapati diri saya menggunakannya untuk mengotak-atik beberapa hal lain juga.</string>
    <string name="nkcoil">NK Ni90 Ni80 Prebuilt Coil Alien</string>
    <string name="nkcoilspecTitle">NK Ni90 Ni80 Prebuilt Coil Alien Specs</string>
    <string name="nkcoil_spec">Ni90 2 Core Parallel Fused Clapton Coil &#8211; (26+26)/36G. 3mm ID Each coil is .19 ohm and there are 6 coils per container\n\nNi90 3 Core Parallel Fused Clapton Coil &#8211; 28G*3/36G.  Each coil is .20 ohm and there are 6 coils per container\n\nNi80 2 Core Parallel Fused Clapton Coil &#8211; (24+24)/38G. 3mm ID  Each coil is .20 ohm and there are 6 coils per container\n\nNi80 2 Core Parallel Fused Clapton Coil &#8211; (26+26)/38G. 3mm ID Each coil is .30 ohm and there are 6 coils per container\n\nNi80 2 Core Parallel Fused Clapton Coil &#8211; (28+28)/408G. 3mm ID Each coil is .50 ohm and there are 6 coils per container\n\nNi80 3 Core Parallel Fused Clapton Coil &#8211; 26G*3/40G.  Each coil is .20 ohm and there are 6 coils per container\n\nNi80 3 Core Parallel Fused Clapton Coil &#8211; 27G*3/40G. 3mm ID  Each coil is .23 ohm and there are 6 coils per container\n\nNi80 3 Core Parallel Fused Clapton Coil &#8211; 28G*3/40G. 3mm ID  Each coil is .3 ohm and there are 6 coils per container\n\nNi80 5 Core Parallel Fused Clapton Coil &#8211; 28G*5/40G.  Each coil is .16 ohm and there are 6 coils per container\n\nNi80 6 Core Parallel Fused Clapton Coil &#8211; 30G*6/40G.  Each coil is .24 ohm and there are 6 coils per container\n\nAlien Coil &#8211; Ni80 &#8211; 27*3/40G. 3mm ID  Each coil is .26 ohm and there are 6 coils per container\n\nAlien VII &#8211; Ni80 &#8211; 26*3/32G. 3mm ID  Each coil is .20 ohm and there are 6 coils per container\n\nSweep Coil &#8211; Ni80 &#8211; 28*4/40G. 3mm ID  Each coil is .22 ohm and there are 6 coils per container\n\nStaggered Coil &#8211; Ni80 &#8211; (26+38)*2/38G. 3mm ID  Each coil is .35 ohm and there are 6 coils per container\n\nSkyfire &#8211; Ni80 &#8211; 26G + (0.1*0.4*5) + 26G/38G.  Each coil is .2 ohm and there are 2 coils per container\n\nNi80 2 Core MTL &#8211; 30G+0G/40G.  Each coil is .75 ohm and there are 6 coils per container\n\nMirror Style &#8211; Ni80 &#8211; 27G*3/40G. 3mm ID  Each coil is .23 ohm and there are 6 coils per container\n\nMirror Style &#8211; Ni80 &#8211; 28G*3/40G. 3mm ID  Each coil is .3 ohm and there are 6 coils per container</string>
    <string name="profilepict">profilePict</string>
    <string name="logoimg">logoImg</string>
</resources>