<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg3"
    tools:context=".DetailDeviceSX">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/device"
            android:src="@drawable/sxmini" />

        <TextView
            android:id="@+id/sx_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/sxmini"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp">
        </TextView>
        <TextView
            android:id="@+id/sx_indonesia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginBottom="16dp"
            android:gravity="center_horizontal"
            android:text="@string/sxmini_indonesia"
            android:textColor="#FFFFFF"
            android:textSize="24sp">
        </TextView>
        <TextView
            android:id="@+id/sx_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/sxmini_detailsind"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            >
        </TextView>
        <TextView
            android:id="@+id/sx_english"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginBottom="16dp"
            android:gravity="center_horizontal"
            android:text="@string/sxmini_english"
            android:textColor="#FFFFFF"
            android:textSize="24sp">
        </TextView>

        <TextView
            android:id="@+id/sx_desceng"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginBottom="16dp"
            android:gravity="center_horizontal"
            android:text="@string/sxmini_detailseng"
            android:textColor="#FFFFFF"
            android:textSize="15sp">

        </TextView>
        <TextView
            android:id="@+id/sx_specTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginBottom="16dp"
            android:gravity="center_horizontal"
            android:text="@string/sxmini_specification"
            android:textColor="#FFFFFF"
            android:textSize="24sp">
        </TextView>

        <TextView
            android:id="@+id/sx_specDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="16dp"
            android:text="@string/sxmini_specdetails"
            android:textColor="#FFFFFF"
            android:textSize="15sp">

        </TextView>
    </LinearLayout>
</ScrollView>