<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg3"
    tools:context=".CoilActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/device"
            android:src="@drawable/nkcoil" />

        <TextView
            android:id="@+id/coil_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/nkcoil"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp">
        </TextView>
        <TextView
            android:id="@+id/coil_specTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginBottom="16dp"
            android:gravity="center_horizontal"
            android:text="@string/nkcoilspecTitle"
            android:textColor="#FFFFFF"
            android:textSize="24sp">
        </TextView>

        <TextView
            android:id="@+id/coil_specDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="16dp"
            android:text="@string/nkcoil_spec"
            android:textColor="#FFFFFF"
            android:textSize="15sp">

        </TextView>
    </LinearLayout>
</ScrollView>